<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="115dp"
    android:layout_marginTop="12dp"
    android:background="@color/colorPrimary">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="72dp"
        android:layout_height="107dp"
        app:cardCornerRadius="7dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBook"
            android:layout_width="78dp"
            android:layout_height="115dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_description_book_logo"
            android:scaleType="fitXY" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvBookTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:fontFamily="@font/montserrat_regular"
        android:paddingStart="0dp"
        android:paddingEnd="30dp"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/tvBookAuthor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        tools:text="Harry Potter and the Goblet of Fire" />


    <TextView
        android:id="@+id/tvBookAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="4dp"
        android:alpha="0.7"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@id/tvBookPrice"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/tvBookTitle"
        tools:text="J.K. Rowling" />

    <TextView
        android:id="@+id/tvBookPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/tvBookAuthor"
        tools:text="19.99" />

    <TextView
        android:id="@+id/tvBookScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvBookPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvBookPrice"
        app:layout_constraintTop_toTopOf="@+id/tvBookPrice"
        tools:text="4.8" />

    <TextView
        android:id="@+id/tvBookAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvBookScore"
        app:layout_constraintStart_toEndOf="@+id/tvSymbolStart"
        app:layout_constraintTop_toTopOf="@+id/tvBookScore"
        tools:text="2390" />


    <TextView
        android:id="@+id/tvSymbolStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:alpha="0.5"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/symbol_start"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvBookAmount"
        app:layout_constraintEnd_toStartOf="@id/tvBookAmount"
        app:layout_constraintStart_toEndOf="@+id/tvBookScore"
        app:layout_constraintTop_toTopOf="@id/tvBookAmount" />

    <TextView
        android:id="@+id/tvSymbolEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/symbol_end"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvBookAmount"
        app:layout_constraintStart_toEndOf="@id/tvBookAmount"
        app:layout_constraintTop_toTopOf="@id/tvBookAmount" />

    <TextView
        android:id="@+id/tvSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/symbol"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvBookPrice"
        app:layout_constraintStart_toEndOf="@+id/tvBookPrice" />

</androidx.constraintlayout.widget.ConstraintLayout>