<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    app:layout_constraintBottom_toBottomOf="@id/vpSimilar"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginTop="31dp"
            android:contentDescription="Button close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close" />

        <ImageView
            android:id="@+id/ivCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:layout_marginEnd="31dp"
            android:contentDescription="@string/content_description_cart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_cart" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/vpSimilar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="31dp"
            android:orientation="horizontal"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/item_similar" />

        <TextView
            android:id="@+id/tvYouCanAlsoLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/you_can_also_like"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/vpSimilar"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="178dp"
            android:layout_height="250dp"
            android:layout_margin="50dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toTopOf="@+id/tvBookName"
            app:layout_constraintEnd_toStartOf="@+id/guidelineCenterVertical"
            app:layout_constraintStart_toStartOf="@+id/guidelineCenterVertical"
            app:layout_constraintTop_toBottomOf="@+id/ivClose">

            <ImageView
                android:id="@+id/ivBookLogoInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_description_book_logo"
                android:scaleType="fitXY" />

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineCenterHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/tvBookName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/guidelineCenterHorizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guidelineCenterHorizontal" />

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:alpha="0.7"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBookName" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineCenterVertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineCenterVertical"
            app:layout_constraintTop_toBottomOf="@+id/tvAuthor" />

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvScore"
            app:layout_constraintStart_toEndOf="@id/tvSymbolStart"
            app:layout_constraintTop_toTopOf="@+id/tvScore" />

        <TextView
            android:id="@+id/tvSymbolStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:alpha="0.5"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/symbol_start"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvAmount"
            app:layout_constraintEnd_toStartOf="@id/tvAmount"
            app:layout_constraintStart_toEndOf="@+id/tvScore"
            app:layout_constraintTop_toTopOf="@id/tvAmount" />

        <TextView
            android:id="@+id/tvSymbolEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/symbol_end"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvAmount"
            app:layout_constraintStart_toEndOf="@id/tvAmount"
            app:layout_constraintTop_toTopOf="@id/tvAmount" />

        <Button
            android:id="@+id/buttonBuy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_buy_corner"
            android:fontFamily="@font/montserrat_bold"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tvYouCanAlsoLike"
            app:layout_constraintEnd_toStartOf="@+id/guidelineCenterVertical"
            app:layout_constraintStart_toStartOf="@+id/ivClose"
            app:layout_constraintTop_toBottomOf="@+id/tvScore" />

        <Button
            android:id="@+id/buttonPreview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_preview_corner"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/button_free_preview"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/buttonBuy"
            app:layout_constraintEnd_toEndOf="@+id/ivCart"
            app:layout_constraintStart_toStartOf="@+id/guidelineCenterVertical"
            app:layout_constraintTop_toTopOf="@+id/buttonBuy" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>